Fix entity containers not centered on desktop

--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -165,7 +165,7 @@ $break-xxl: 1408px; // Extra large devices (large desktops)
 }
 
 @mixin entity($float, $width) {
-  margin: 1em 0;
+  margin: 1em auto;
   overflow-x: hidden;
 
   .image {
